# ai-smm-platform-b2b

./: .deepeval_telemtry.txt  .env.example  .gitignore  CLAUDE.md  Dockerfile.optimized  Home.py  README.md  REVISED_DEVELOPMENT_PLAN.md  WEEK_2_TASKS.md  WEEK_3_TASKS.md  WEEK_4_TASKS.md  WEEK_5_TASKS.md  WEEK_6_REVIEW.md  WEEK_6_TASKS.md  WEEK_7_TASKS.md  WEEK_8_TASKS.md  audience.py  campaign.py  docker-compose.yml  pyproject.toml  seed_viral_patterns.py  temp.docx  test2.html  test_mongo.py  test_openai.py  test_openai_simple.py  test_template_generator.py  test_template_utils.py  test_viral_patterns.py
agents/: agent_state.py  analytics_agent.py  blog_generator_agent.py  content_generation_agent.py  copy_variations_agent.py  evaluation_agent.py  platform_optimizer_agent.py  template_generator_agent.py  translation_agent.py  video_script_agent.py  viral_content_agent.py
analytics/: __init__.py  analytics_models.py  mock_analytics_generator.py
common/: __init__.py  assets.py  catalog.py  config.py  llm.py  redis.py  strapi_client.py  ui.py  utils.py
components/: __init__.py  campaign_wizard.py
data/: viral_patterns.json
demo_campaigns/: ecommerce_demo.json  fitness_demo.json  saas_demo.json
docs/: B2B_TARGET_PERSONAS.md  BUSINESS_MODEL_CANVAS.md  DISASTER_RECOVERY.md  EXAMPLE_BUSINESSES.md  FINANCIAL_MODEL.md  LIQUID_TEMPLATES.md  MOCK_VS_REAL_API_STRATEGY.md  MULTI_TENANCY_DESIGN.md  SECURITY_AUDIT.md  STRIPE_SETUP.md  VIRAL_PATTERNS_EXPERT_REVIEW.md  VIRAL_PATTERNS_VALIDATION.md  WEEK_2_COMPLETION_SUMMARY.md  WEEK_3_PLAN_REVIEW.md  WEEK_4_PLAN_REVIEW.md
(+78 files in other folders)
